[package]
name = "cortex-m-rtfm-stm32f0xx"
version = "0.5.0"
authors = ["Joe Ferner <joe@fernsroth.com>"]
edition = "2018"

[lib]
name = "rtfm_stm32f0xx"

[dependencies]
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
stm32f0 = "0.8.0"
cortex-m-rtfm = { path = "../cortex-m-rtfm" }

[dev-dependencies]
panic-semihosting = "0.5.3"
cortex-m-semihosting = "0.3.5"
embedded-hal = { path = "../embedded-hal" }
stm32f0xx-hal = { path = "../stm32f0xx-hal", features = ["stm32f072"] }

[features]
device-selected = []
stm32f030 = ["stm32f0/stm32f0x0", "device-selected"]
stm32f030x4 = ["stm32f030"]
stm32f030x6 = ["stm32f030"]
stm32f030x8 = ["stm32f030"]
stm32f030xc = ["stm32f030"]
stm32f031 = ["stm32f0/stm32f0x1", "device-selected"]
stm32f038 = ["stm32f0/stm32f0x8", "device-selected"]
stm32f042 = ["stm32f0/stm32f0x2", "device-selected"]
stm32f048 = ["stm32f0/stm32f0x8", "device-selected"]
stm32f051 = ["stm32f0/stm32f0x1", "device-selected"]
stm32f058 = ["stm32f0/stm32f0x8", "device-selected"]
stm32f070 = ["stm32f0/stm32f0x0", "device-selected"]
stm32f070x6 = ["stm32f070"]
stm32f070xb = ["stm32f070"]
stm32f071 = ["stm32f0/stm32f0x1", "device-selected"]
stm32f072 = ["stm32f0/stm32f0x2", "device-selected"]
stm32f078 = ["stm32f0/stm32f0x8", "device-selected"]
stm32f091 = ["stm32f0/stm32f0x1", "device-selected"]
stm32f098 = ["stm32f0/stm32f0x8", "device-selected"]
